<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/meuTxtView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/txtFieldValor1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint= "@string/valor_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/txtFieldValor2"
        app:layout_constraintTop_toBottomOf="@+id/meuTxtView"
        />
    <EditText
        android:id="@+id/txtFieldValor2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/valor_2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/txtFieldValor1"
        app:layout_constraintTop_toBottomOf="@+id/meuTxtView"
        />

    <Button
        android:id="@+id/btnSomar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/somar"
        app:layout_constraintTop_toBottomOf="@+id/txtFieldValor1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:id="@+id/btnMultiplicar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/multiplicar"
        app:layout_constraintTop_toBottomOf="@+id/btnSomar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:id="@+id/btnDividir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dividir_valor_1_dividido_por_valor_2"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiplicar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:id="@+id/btnSubtrair"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/subtrair_valor_1_menor_valor_2"
        app:layout_constraintTop_toBottomOf="@+id/btnDividir"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>